<resources>
    <string name="app_name">TestTest</string>
    <string name="logo_contentDescription">logo</string>
    <string name="signin_hint_email">Email</string>
    <string name="signin_hint_pass">Пароль</string>
    <string name="signin_hint_pass2">Повтор пароля</string>
    <string name="signin_button_enter">Войти</string>
    <string name="signin_button_register">Регистрация</string>

    <string name="signup_hint_name">Имя</string>
    <string name="signup_hint_lastName">Фамилия</string>
    <string name="signup_button_doRegister">Зарегистрироваться</string>
    <string name="signup_button_haveAccount">У меня уже есть аккаунт</string>

    <string name="back_button_back">Назад</string>
    <string name="signup_button_back">К экрану входа</string>
    <string name="title_activity_choose_version">ChooseVersionActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="lesson1">Глагол to be (быть) очень важен, потому что мы его используем для описания того, какой кто-то или что-то есть. Например, \"I am happy\" (Я счастлив), \"She is kind\" (Она добрая), \"They are smart\" (Они умные).\n\nДля начала поговорим о форме глагола to be в простом настоящем времени.\n\nКакую же форму глагола to be использовать? Она зависит от того, о ком предложение. Вот таблица, помогающая запомнить\n\nЯ - am - только для себя мы используем am\nТы, Мы, Вы, Они - are - для множественного числа всегда используем are, но слово you имеет обращение и ты и вы - в том числе и во множественном числе, поэтому оно тоже сюда попадает.\nОн/Она/Оно - is - для всех остальных форм используем is\n\nТакже важно знать, как склоняются глаголы, чтобы описывать действия в прошлом. Для глагола to be используется форма \"was\" для единственного числа (I, he, she, it) и \"were\" для множественного числа (we, you, they). \n\nНапример: \"Yesterday, I was happy\" (Вчера я был счастлив), \"Last week, they were on vacation\" (На прошлой неделе они были в отпуске). \n\nНадеюсь, эта информация помогла вам лучше понять спряжение и склонение глагола to be на английском языке.</string>
</resources>